add cors at WebSecurityConfigurerAdapter, allow origin

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/schoolmanagement?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone = GMT
+    url: jdbc:mysql://localhost:3306/schoolmanagement?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone = GMT
     username:  root
   jpa:
     hibernate:
